--- a/style.css
+++ b/style.css
@@ -14,8 +14,8 @@ body {
     gap: 30px;
     margin: 0px;
     box-sizing: border-box;
-    background-color: #93c5fd;
-    color: white;
+    background-color: peachpuff;
+    color: black;
 }
 .headContainer {
     display: flex;
@@ -23,26 +23,25 @@ body {
     align-items: center;
     flex-wrap: wrap;
     width: 100%;
-
-    gap: 40px;
+    gap: 10px;
 }
 .headContainer h3 {
-    font-size: 2rem;
+    font-size: 2.5rem;
     padding: 0px;
     margin: 0px;
     font-family: h3Font, system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
 }
 .headContainer input[type="search"] {
-    width: max(40%, 35ch);
-    padding: 5px;
+    width: max(40%, 40ch);
+    padding: 2px 10px;
     appearance: none;
-    color: #93c5fd;
+    color: black;
     font-size: 0.9rem;
     margin: 0px;
-    background-color: white;
+    background-color: peachpuff;
     outline: none;
-    border: 1px solid white;
-    border-radius: 5px;
+    border: 1px solid black;
+    border-radius: 10px;
     height: 30px;
 }
 
@@ -52,12 +51,12 @@ body {
     height: 15%;
     display: flex;
     flex-wrap: wrap;
-    padding: 10px 40px;
+    padding: 10px 20px 10px 40px;
     box-sizing: border-box;
     justify-content: space-between;
     gap: 20px;
     background-color: white;
-    color: #93c5fd;
+    color: black;
     border-radius: 10px;
     box-shadow: 5px 2px 3px 0.5px darkgrey;
 
@@ -70,30 +69,37 @@ body {
     width: max(500px, 40%);
 }
 .addBook h4 {
-    font-size: 1.7rem;
+    font-size: 2rem;
     padding: 0px;
     margin: 0px;
 }
 .addBook p {
-    font-size: 1rem;
+    font-size: 1.5rem;
     padding: 0px;
     margin: 0px;
+}
+.addBook button {
+    background-color: #38bdf8;
 }
 .addBook button, button {
     width: fit-content;
-    padding: 10px;
-    background-color: #93c5fd;
-    color: white;
+    padding: 10px 20px;
+    background-color: peachpuff;
+    color: black;
     font-size: 1rem;
     font-weight: bolder;
     border-radius: 10px;
-    border: 1px solid #93c5fd;
+    border: 1px solid peachpuff;
 }
 .imgContainer {
-    width: 40%;
     height: 100%;
     padding: 0px;
     margin: 0px;
+    text-align: center;
+}
+.imgContainer a {
+    font-size: 0.8rem;
+    font-style: italic;
 }
 .imgContainer img {
     height: 100%;
@@ -108,7 +114,7 @@ body {
 }
 .bookContainer h3 {
     font-size: 1.7rem;
-    color: white;
+    color: black;
     padding: 0px;
     margin: 0px;
 }
@@ -116,18 +122,19 @@ body {
 .books {
     width: 100%;
     display: flex;
+    gap: 10px;
     flex-wrap: wrap;
 }
 .one {
-    width: fit-content;
+    width: max(250px, 25%);
     height: fit-content;
     box-sizing: border-box;
     display: flex;
-    gap: 5px;
+    gap: 20px;
     padding: 10px;
     flex-direction: column;
-    background-color: white;
-    color:#93c5fd;
+    background-color: black;
+    color: peachpuff;
     border-radius: 10px;
     text-align: center;
     box-shadow: 5px 2px 3px 0.5px darkgrey;
@@ -144,14 +151,14 @@ body {
     display: flex;
     text-align: center;
     gap: 10px;
-    flex-direction: column;
+    justify-content: space-between;
 }
 .one p, .one button {
     margin: 0px;
     font-weight: bolder;
     font-size: 0.8rem;
-    padding: 0px;
-    border-bottom: 1px solid #93c5fd;
+    padding: 10px 0px;
+    border-bottom: 1px solid peachpuff;
 }
 .one div div {
     width: 100%;
