--- a/style.css
+++ b/style.css
@@ -8,7 +8,7 @@
 }
 body {
     font-family: myFont, system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
-    padding: 30px 50px;
+    padding: 30px 20px;
     display: flex;
     flex-direction: column;
     gap: 30px;
@@ -26,7 +26,7 @@ body {
     gap: 10px;
 }
 .headContainer h3 {
-    font-size: 2.5rem;
+    font-size: 2.2rem;
     padding: 0px;
     margin: 0px;
     font-family: h3Font, system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
@@ -51,7 +51,7 @@ body {
     height: 15%;
     display: flex;
     flex-wrap: wrap;
-    padding: 10px 20px 10px 40px;
+    padding: 10px 40px;
     box-sizing: border-box;
     justify-content: space-between;
     gap: 20px;
@@ -98,7 +98,7 @@ body {
     text-align: center;
 }
 .imgContainer a {
-    font-size: 0.8rem;
+    font-size: 0.5rem;
     font-style: italic;
 }
 .imgContainer img {
@@ -111,6 +111,15 @@ body {
     display: flex;
     flex-direction: column;
     gap: 20px;
+}
+.editContainer {
+    width: 100%;
+    display: flex;
+    justify-content: space-between;
+}
+.edit {
+    background-color: black;
+    color: peachpuff;
 }
 .bookContainer h3 {
     font-size: 1.7rem;
@@ -181,11 +190,13 @@ body {
     visibility: hidden;
     z-index: 99;
     backdrop-filter: blur(3px);
+    
 }
 .modal {
     visibility: visible;
     width: 100%;
     height: 100%;
+    position: fixed;
 }
 form {
     width: fit-content;
